--- a/app/scss/header/header.scss
+++ b/app/scss/header/header.scss
@@ -1,24 +1,38 @@
 .header {
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  height: 100vh;
+  &__bg{
+    position: absolute;
+    left: 0;
+    top: 0;
+    mix-blend-mode: color-burn;
+    opacity: 0.7;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
   .container {
     padding: 60px 80px 45px;
     margin: 0 auto;
     position: relative;
     // border-bottom: 1px solid var(--color--contrast-high);
-    &::after {
-      position: absolute;
-      content: "";
-      width: 100%;
-      height: 1px;
-      background-color: var(--color-contrast-high);
-      left: 0;
-      bottom: 0;
-    }
+    // &::after {
+    //   position: absolute;
+    //   content: "";
+    //   width: 100%;
+    //   height: 1px;
+    //   background-color: var(--color-contrast-high);
+    //   left: 0;
+    //   bottom: 0;
+    // }
   }
   &__top {
     position: relative;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 115px;
+    margin-bottom: 109px;
   }
   &__logo {
     position: relative;
@@ -96,6 +110,62 @@
     line-height: 89px;
     color: var(--color--contrast-low);
     font-family: RFDewi, Arial, sans-serif;
+    margin-bottom: 50px;
+  }
+  &__to-bottom{
+    display: flex;
+    justify-content: space-between;
+    border-top: 1px solid var(--color-contrast-high);
+    padding-top: 40px;
+  }
+  .to-bottom {
+    &_left {
+      // position: absolute;
+      // left: 80px;
+      // top: 45px;
+      display: inline-block;
+      position: relative;
+      width: 136px;
+      height: 39px;
+      .arrows-dark {
+        position: absolute;
+        left: 0;
+        top: 0;
+        display: flex;
+        gap: 21px;
+        opacity: var(--opacity-arrow-dark);
+      }
+      .arrows-light {
+        position: absolute;
+        left: 0;
+        top: 0;
+        display: flex;
+        gap: 21px;
+        opacity: var(--opacity-arrow-light);
+      }
+    }
+    &_right {
+      // position: absolute;
+      // right: 80px;
+      // top: 45px;
+      width: 31px;
+      height: 39px;
+      .arrows-wrapper {
+        position: relative;
+      }
+      .arrow-dark {
+        position: absolute;
+        left: 0;
+        top: 0;
+        opacity: var(--opacity-arrow-dark);
+      }
+      .arrow-light {
+        position: absolute;
+        left: 0;
+        top: 0;
+        opacity: var(--opacity-arrow-light);
+      }
+    }
   }
 }
 @media(max-width: 1350px) {
