--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -6,6 +6,7 @@
 @import "modal";
 @import "pages/cases";
 @import "pages/services";
+@import "pages/services-new";
 @import "pages/portfolio";
 @import "pages/sertificats";
 @import "pages/prices";
