--- a/app/scss/modal.scss
+++ b/app/scss/modal.scss
@@ -1,4 +1,5 @@
-.modal-overlay {
+.modal-overlay-sertificat,
+.modal-overlay-video {
 	position: fixed;
 	left: 0;
 	top: 0;
@@ -20,7 +21,7 @@
 .modals{
   z-index: 2;
 }
-.modal {
+.modal__sertificat {
 	width: 560px;
 	height: 1051px;
   margin-top: 180px;
@@ -29,29 +30,29 @@
 	align-items: center;
 	justify-content: center;
 	display: none;
-  &__bottom{
+  &-bottom{
     text-align: center;
     background: #fff;
     padding: 40px;
   }
-  &__title{
+  &-title{
     font-size: 32px;
     line-height: 1.17;
     font-weight: 800;
     margin-bottom: 17px;
   }
-  &__text{
+  &-text{
     font-size: 16px;
     line-height: 1.55;
     font-weight: 300;
     margin-bottom: 20px;
   }
-  &__icons{
+  &-icons{
     display: flex;
     justify-content: center;
     gap: 4px;
   }
-  &__icon{
+  &-icon{
     width: 34px;
     height: 34px;
     border-radius: 2px;
