--- a/app/scss/pages/prices.scss
+++ b/app/scss/pages/prices.scss
@@ -15,7 +15,8 @@
     justify-content: center;
     border-top: 1px solid #4d4e4f;
     gap: 30px;
-    padding-top: 60px;
+    padding-top: 55px;
+    padding-bottom: 90px;
   }
   &__row{
     display: flex;
@@ -23,10 +24,51 @@
     gap: 30px;
   }
   &__item{
+    position: relative; 
     width: 260px;
+    height: 453px;
     border: 1px solid var(--bg-panel4d4e4f);
     color: var(--bg-panel4d4e4f);
     border-radius: 12px;
-    padding-top: 30px;
+    padding-top: 40px;
+    text-align: center;
+    padding-left: 20px;
+    padding-right: 20px;
+    &-title{
+      font-size: 21px;
+      font-weight: 800;
+      margin-bottom: 36px;
+    }
+  }
+  &__list-item{
+    font-weight: 400;
+    font-size: 14px;
+    margin-bottom: 20px;
+  }
+  &__price{
+    font-size: 25px;
+    font-weight: 800;
+    position: absolute;
+    bottom: 120px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+  }
+  &__btn{
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 50px;
+    width: 160px;
+    height: 40px;
+    border: 1px solid #4d4e4f;
+    color: #4d4e4f;
+    cursor: pointer;
+    transition: .3s;
+    border-radius: 123px;
+    &:hover{
+      color: var(--filter-active);
+    border-color: var(--filter-active);
+    }
   }
 }
