--- a/app/scss/header/header.scss
+++ b/app/scss/header/header.scss
@@ -38,10 +38,16 @@
   .header__logo_light {
     opacity: var(--opacity-logo-light);
   }
-  .nav-mobile-btn {
+  .mobile-btn-wrapper{
+    padding: 12px 20px;
+    background: #000;
     position: absolute;
-    right: 0px;
-    top: 0px;
+    right: -30px;
+    top: -30px;
+    border-radius: 0px 0px 0px 5px;
+    display: none;
+  }
+  .nav-mobile-btn {
     width: 37px;
     height: 37px;
     display: flex;
@@ -76,9 +82,13 @@
   }
   .nav {
     display: none;
-    align-items: center;
-    justify-content: space-between;
-    width: 375px;
+    background: #0E0E0E;
+    &.active{
+      display: flex;
+    }
+    &__list{
+      text-align: right;
+    }
     &__item {
       margin-bottom: 7px;
     }
@@ -92,6 +102,10 @@
     }
   }
   &__links {
+    position: absolute;
+    right: 93px;
+    top: 65px;
+    z-index: 2;
     .link-phone {
       font-family: RFDewi, Arial, sans-serif;
       font-weight: 400;
@@ -228,7 +242,7 @@
 }
 @media (max-width: 1350px) {
   .switch.media {
-    top: 30px;
+    top: 15px;
     right: 93px;
   }
 }
@@ -247,14 +261,29 @@
     .header__top {
       margin-bottom: 200px;
     }
+    .header__links{
+      top: auto;
+      bottom: 40px;
+      right: 50%;
+      transform: translateX(50%);
+    }
+    .mobile-btn-wrapper{
+      display: flex;
+    }
     .nav-mobile-btn {
       display: flex;
     }
     .header__nav {
-      display: none;
+      // display: none;
       position: absolute;
       right: 0;
       top: 35px;
+    }
+  }
+  @media (max-width: 1270px){
+    .to-bottom_left,
+    .to-bottom_right{
+      display: none;
     }
   }
   @media (max-width: 1175px) {
@@ -264,6 +293,58 @@
     .header__title {
       font-size: 32px;
       line-height: 38px;
+    }
+  }
+  @media (max-width: 980px){
+    .header__services{
+      flex-direction: column;
+    }
+    .header__service{
+      &:first-child{
+        max-width: 526px;
+        width: 100%;
+        margin-bottom: 17px;
+      }
+      &:nth-child(2){
+        max-width: 250px;
+        width: 100%;
+        margin-bottom: 17px;
+      }
+      &:last-child {
+        margin-right: 0;
+        max-width: 106px;
+        width: 100%;
+      }
+    }
+  }
+  @media (max-width: 768px){
+    height: auto;
+    padding-bottom: 45px;
+    .header__top{
+      margin-bottom: 90px;
+    }
+    .header__title{
+      margin-bottom: 90px;
+    }
+    .header__services{
+      position: static;
+      margin-bottom: 155px;
+    }
+    .header__to-bottom{
+      border: none;
+    }
+    .header__links{
+      display: flex;
+      flex-direction: column-reverse;
+      align-items: center;
+      position: static;
+      transform: translateX(0);
+      .link-phone{
+        margin-right: 0;
+      }
+      .request-btn{
+        margin-bottom: 11px;
+      }
     }
   }
   @media (max-width: 630px) {
