--- a/app/scss/pages/reviews.scss
+++ b/app/scss/pages/reviews.scss
@@ -39,10 +39,19 @@
       margin-bottom: 16px;
       width: 100%;
       height: 303px;
-      img {
+      position: relative;
+      .reviews__img {
         object-fit: cover;
         width: 100%;
         height: 100%;
+      }
+      .youtube-icon{
+        width: 100px;
+        height: 70px;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        transform: translateX(-50%) translateY(-50%);
       }
     }
   }
