--- a/app/scss/footer/footer.scss
+++ b/app/scss/footer/footer.scss
@@ -1,12 +1,8 @@
 .footer {
+  padding-top: 300px;
   .container {
     padding-left: 80px;
     padding-right: 80px;
-  }
-  &__inner {
-    border-top: 1px solid #4d4e4f;
-    display: flex;
-    justify-content: space-between;
   }
   &__title {
     font-weight: 400;
@@ -14,8 +10,8 @@
     line-height: 150%;
     max-width: 500px;
     width: 100%;
-    padding-top: 37px;
     color: #4d4e4f;
+    margin-bottom: 40px;
   }
   &__link {
     color: var(--color--contrast-low);
@@ -45,9 +41,9 @@
     padding-right: 32px;
     background: var(--form-color);
     &-wrapper {
-      padding-top: 103px;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
+      align-items: center;
       margin-bottom: 100px;
     }
   }
@@ -136,7 +132,7 @@
   &__bottom {
     display: flex;
     justify-content: space-between;
-    padding-bottom: 60px;
+    padding-bottom: 80px;
   }
   &__nav {
     display: flex;
@@ -196,6 +192,7 @@
     }
   }
   @media (max-width: 768px) {
+    padding-top: 150px;
     .container {
       padding-left: 20px;
       padding-right: 20px;
