--- a/app/scss/header/header.scss
+++ b/app/scss/header/header.scss
@@ -3,6 +3,15 @@
   background-size: cover;
   position: relative;
   height: 100vh;
+  .top-line {
+    width: 100%;
+    height: 62px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: #000;
+    display: none;
+  }
   &__bg {
     position: absolute;
     left: 0;
@@ -39,7 +48,7 @@
   .header__logo_light {
     opacity: var(--opacity-logo-light);
   }
-  .mobile-btn-wrapper{
+  .mobile-btn-wrapper {
     padding: 12px 20px;
     background: #000;
     position: absolute;
@@ -47,6 +56,7 @@
     top: -30px;
     border-radius: 0px 0px 0px 5px;
     display: none;
+    z-index: 10;
   }
   .nav-mobile-btn {
     width: 37px;
@@ -76,22 +86,86 @@
           transition: 0.3s;
         }
       }
-      ~ .header__nav {
-        display: block;
-      }
+      // ~ .header__nav {
+      //   display: block;
+      //   border: 1px solid #ffffff;
+      // }
     }
   }
   .nav {
-    display: none;
-    background: #0E0E0E;
-    &.active{
-      display: flex;
+    position: absolute;
+    background: #000000;
+    right: 0;
+    top: -30px;
+    max-width: 375px;
+    width: 100%;
+    height: 100vh;
+    padding-top: 125px;
+    padding-left: 20px;
+    transform: translateY(-100vh);
+    transition: 0.3s;
+    transition-delay: 0.3s;
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    &.active {
+      transform: translateY(0);
+      transition: 0.3s;
     }
-    &__list{
-      text-align: right;
+    &__list {
+      &:first-child {
+        margin-right: 48px;
+      }
+    }
+    &__lists {
+      transition: 0.3s;
+      opacity: 0;
+      display: flex;
+      &.active {
+        transition-delay: 0.3s;
+        opacity: 1;
+      }
     }
     &__item {
-      margin-bottom: 7px;
+      margin-bottom: 30px;
+      font-size: 20px;
+      line-height: 24px;
+    }
+    &__bottom {
+      position: relative;
+      &::before {
+        position: absolute;
+        content: "";
+        width: 335px;
+        height: 1px;
+        background: #4d4e4f;
+        bottom: 103px;
+      }
+    }
+    &__contacts {
+      position: absolute;
+      bottom: 40px;
+      &-row{
+        display: flex;
+        gap: 24px;
+        margin-bottom: 15px;
+        &:last-child{
+          margin-bottom: 0;
+        }
+      }
+      .nav__contact {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 17px;
+        color: #ffffff;
+      }
+    }
+    &__logo {
+      position: absolute;
+      width: 102px;
+      height: 16px;
+      bottom: 132px;
     }
     &__link {
       text-align: right;
@@ -262,28 +336,31 @@
     .header__top {
       margin-bottom: 200px;
     }
-    .header__links{
+    .top-line {
+      display: flex;
+    }
+    .header__logo {
+      width: 120px;
+      height: 19px;
+      top: -10px;
+      left: -10px;
+    }
+    .header__links {
       top: auto;
       bottom: 40px;
       right: 50%;
       transform: translateX(50%);
     }
-    .mobile-btn-wrapper{
+    .mobile-btn-wrapper {
       display: flex;
     }
     .nav-mobile-btn {
       display: flex;
     }
-    .header__nav {
-      // display: none;
-      position: absolute;
-      right: 0;
-      top: 35px;
-    }
   }
-  @media (max-width: 1270px){
+  @media (max-width: 1270px) {
     .to-bottom_left,
-    .to-bottom_right{
+    .to-bottom_right {
       display: none;
     }
   }
@@ -296,17 +373,17 @@
       line-height: 38px;
     }
   }
-  @media (max-width: 980px){
-    .header__services{
+  @media (max-width: 980px) {
+    .header__services {
       flex-direction: column;
     }
-    .header__service{
-      &:first-child{
+    .header__service {
+      &:first-child {
         max-width: 526px;
         width: 100%;
         margin-bottom: 17px;
       }
-      &:nth-child(2){
+      &:nth-child(2) {
         max-width: 250px;
         width: 100%;
         margin-bottom: 17px;
@@ -318,42 +395,42 @@
       }
     }
   }
-  @media (max-width: 768px){
+  @media (max-width: 768px) {
     height: auto;
-    .container{
+    .container {
       height: auto;
     }
-    .header__logo{
+    .header__logo {
       width: 120px;
       height: 19px;
     }
-    .header__top{
+    .header__top {
       margin-bottom: 90px;
     }
-    .header__title{
+    .header__title {
       margin-bottom: 90px;
     }
-    .header__services{
+    .header__services {
       position: static;
       margin-bottom: 155px;
     }
-    .header__service{
+    .header__service {
       margin-right: 0;
     }
-    .header__to-bottom{
+    .header__to-bottom {
       border: none;
       padding-top: 0;
     }
-    .header__links{
+    .header__links {
       display: flex;
       flex-direction: column-reverse;
       align-items: center;
       position: static;
       transform: translateX(0);
-      .link-phone{
+      .link-phone {
         margin-right: 0;
       }
-      .request-btn{
+      .request-btn {
         margin-bottom: 11px;
       }
     }
